# futarchy-prop-pool

./: Anchor.toml  Dockerfile.MB  Dockerfile.Surfpool  Makefile  compose.yml  futarchy.md  package.json  release.json  txtx.yml
app/: useV04ProposalTransactions.ts
programs/prop-pool/: Cargo.toml
programs/prop-pool/src/: errors.rs  lib.rs
programs/prop-pool/src/ix/: create_staged_prop.rs  crud_staged_prop.rs  futarchy.rs  metadao.rs  mod.rs
programs/prop-pool/src/state/: lp.rs  mod.rs  staged_proposal.rs
runbooks/: README.md
runbooks/deployments/: local-testing.tx
tests/: 01.ts  consts.ts  luzid.ts  prop-pool.ts  surfpool.ts
