[package]
name = "prop-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prop_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
autocrat = { git = "https://github.com/spacemandev-git/futarchy", branch = "develop", features = [
    "cpi",
] }
amm = { git = "https://github.com/spacemandev-git/futarchy", branch = "develop", features = [
    "cpi",
] }
conditional-vault = { git = "https://github.com/spacemandev-git/futarchy", branch = "develop", features = [
    "cpi",
], package = "conditional_vault" }
